--- a/wp2024primer/src/main/resources/templates/list.html
+++ b/wp2024primer/src/main/resources/templates/list.html
@@ -80,7 +80,7 @@
             </td>
         </tr>
     </table>
-
+    <div th:insert="~{paging :: pageSection(${page})}"></div>
 </div>
 <div>
     <ul id="nav">
